--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <div class="site">
             <div class="top" id="top">
-                <h1 class="herotext">Vojtěch Úšela</h1>
+                <h1 class="herotext" onclick="debug()" >Vojtěch Úšela</h1>
                 <div class="hero-holder">
                     <div>
                         <img class="vojta" src="temp/vojta11.png">
