--- a/moreprojects.html
+++ b/moreprojects.html
@@ -28,40 +28,65 @@
             </div>
         </div>
         <div class="site">
-            <div class="topp" >
-                <h2>Portfolio</h2>
-                <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. 
-                    Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. 
-                    Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. 
-                    Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. 
-                    Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
-                <img src="photos/web.gif">
-                <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. 
-                    Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. 
-                    Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. 
-                    Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. 
-                    Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
-                <img src="photos/Gamesssss.gif">
-                <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. 
-                    Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. 
-                    Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. 
-                    Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. 
-                    Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
-                <img src="photos/web.gif">
-                <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. 
-                    Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. 
-                    Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. 
-                    Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. 
-                    Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
-                <img src="photos/web.gif">
-                <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. 
-                    Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. 
-                    Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. 
-                    Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. 
-                    Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
-                <img src="photos/Gamesssss.gif">
+            <div class="topp" id="topp" data-aos="fade-up">
+                <h2>Portfolio větší projekty</h2>
+                <div class="portfolio-container-ps">
+                    <div class="portfoliotab1">
+                        <h3>Spc Fandom Stránka</h3>
+                        <img src="photos/web.gif">
+                        <div class="text-container-2">
+                            <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
+                        </div>
+                        <a href="https://github.com/vojtaucz/Scp-Fandom-Site"><button>Prozkoumat více</button></a>
+                    </div>
+                    <div class="portfoliotab2">
+                        <h3>Práce na přímačky</h3>
+                        <img src="photos/Gamesssss.gif">
+                        <div class="text-container-2">
+                            <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
+                        </div>
+                        <a href="https://github.com/vojtaucz/Scp-Fandom-Site"><button>Prozkoumat více</button></a>
+                    </div>
+                    <div class="portfoliotab3">
+                        <h3>Wide Python Editor</h3>
+                        <img src="photos/Gamesssss.gif">
+                        <div class="text-container-2">
+                            <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
+                        </div>
+                        <a href="https://github.com/vojtaucz/WIDE"><button>Prozkoumat více</button></a>
+                    </div>
+                </div>
+            </div>
+            <div class="topp" id="topp" data-aos="fade-up">
+                <h2>Portfolio menší projekty</h2>
+                <div class="portfolio-container-ps">
+                    <div class="portfoliotab1">
+                        <h3>Spc Fandom Stránka</h3>
+                        <img src="photos/web.gif">
+                        <div class="text-container-2">
+                            <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
+                        </div>
+                        <a href="https://github.com/vojtaucz/Scp-Fandom-Site"><button>Prozkoumat více</button></a>
+                    </div>
+                    <div class="portfoliotab2">
+                        <h3>Práce na přímačky</h3>
+                        <img src="photos/Gamesssss.gif">
+                        <div class="text-container-2">
+                            <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
+                        </div>
+                        <a href="https://github.com/vojtaucz/Scp-Fandom-Site"><button>Prozkoumat více</button></a>
+                    </div>
+                    <div class="portfoliotab3">
+                        <h3>Wide Python Editor</h3>
+                        <img src="photos/Gamesssss.gif">
+                        <div class="text-container-2">
+                            <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
+                        </div>
+                        <a href="https://github.com/vojtaucz/WIDE"><button>Prozkoumat více</button></a>
+                    </div>
 
-                <a href="moreprojects.html"><button>Prozkoumat více</button></a>
+                </div>
+
             </div>
             <div class="end">
                 <h3>By vojta</h3>
