--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         </div>
         <div class="site">
             <div class="top" id="top">
-                <h1 class="herotext" onclick="debug()" >Vojtěch Úšela</h1>
+                <h1 class="herotext">Vojtěch Úšela</h1>
                 <div class="hero-holder">
                     <div>
-                        <img class="vojta" src="temp/vojta11.png">
+                        <img class="vojta" src="temp/vojta11-2.png">
                     </div>
                     <div class="langarmy"> 
                         <img src="photos/langarmy.png" class="langarmy">
@@ -120,7 +120,7 @@
                     <div class="text-container-4">
                         <p>Mam praxe v html bla bla bla nejake chytre slovo atd malesuada. Nunc tincidunt  ante vitae massa. Class aptent taciti sociosqu ad litora torquent per  conubia nostra, per inceptos hymenaeos. Aenean fermentum risus id  tortor. Fusce consectetuer risus a nunc.</p>
                     </div>
-                    <img class="boombox" src="temp/boombox.png" >
+                    <img class="boombox" src="temp/vojta44.png">
                 </div>
                 <div class="konicky-container-2" data-aos="fade-left">
                     <div class="text-container-4">
